Bug 83252 - Wrong punctuation direction after Chinese characters in vertical layout
Summary: Wrong punctuation direction after Chinese characters in vertical layout
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.6.2 release
Hardware: Other Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.3
Keywords:
Depends on:
Blocks: CJK
  Show dependency treegraph
 
Reported: 2014-08-29 15:16 UTC by Cheng-Chia Tseng
Modified: 2016-09-16 16:28 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
example odt file (12.10 KB, application/vnd.oasis.opendocument.text)
2014-08-29 15:16 UTC, Cheng-Chia Tseng
Details
Screenshot from Ubuntu 14.10 LibO 4.4 alpha2 (15.46 KB, image/jpeg)
2014-11-13 12:04 UTC, Buovjaga
Details
Screenshot from Fedora 21 Beta LibO 4.4 Beta1 (106.90 KB, image/png)
2014-12-01 13:10 UTC, Cheng-Chia Tseng
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cheng-Chia Tseng 2014-08-29 15:16:00 UTC
Created attachment 105435 [details]
example odt file

Description of problem:
The direction of Chinese punctuations in vertical layout is different with horizontal layout. Punctuations are about 90 degree rotation from center of the characters.

In LibreOffice, the direction of Chinese punctuations are dealt with well in vertical layout. However, it didn't 

How reproducible:
Always

Steps to Reproduce:
1. Click Format > Page, and switch to Page tab
2. Change Text direction into "Right-to-left (vertical)", then click Apply button
3. Paste "《「…」》" and press Enter
4. Paste "「…《English test 》…」" and press Enter
5. Paste "「…《中文直書測試》…」" and press Enter to compare with results of step 3 and 4

Actual results:
The displaying result of Chinese punctuations is different with 3 and 4; however, they should be all the same.

Expected results:
Displaying results of 3, 4 and 5 are all the same.

The attachment is an example odt file to show the issue here.
Comment 1 Cheng-Chia Tseng 2014-08-29 15:21:25 UTC
Well, some part of "description or problem" is missing. In the second paragraph,

> In LibreOffice, the direction of Chinese punctuations are dealt with well in vertical layout. However, it didn't 

In LibreOffice, the direction of Chinese punctuations are dealt with well in vertical layout. However, it didn't function properly when Chinese punctuations are placed after Chinese characters. Those Chinese punctuations after Chinese characters are placed in horizontal directions instead of vertical directions.
Comment 2 Urmas 2014-08-29 16:51:10 UTC
Cannot confirm in Windows.
Comment 3 Cheng-Chia Tseng 2014-08-30 07:27:19 UTC
Tested on Windows machine with the example file today. Cannot reproduce either.

The issue seems to be only existed on Linux platform... :S
Comment 4 Cheng-Chia Tseng 2014-08-30 07:56:16 UTC
I found that "copy-paste" will also copy the the attribute of text direction, so do not copy the Chinese punctuations from Steps to reporduce section directly. 

Please just use the example odt file to see the issue directly.

Reproducible on Linux platform.
Not reporducible on Windows platform.

Mac system is not tested.
Comment 5 Buovjaga 2014-11-13 12:04:27 UTC
Created attachment 109404 [details]
Screenshot from Ubuntu 14.10 LibO 4.4 alpha2

This is what I see. Is this the wrong rendering?

Ubuntu 14.10 64-bit Version: 4.4.0.0.alpha2+
Build ID: 5bff4b016c4b44f4123e0e6a4fd4c0c4dc0cfa2d
TinderBox: Linux-rpm_deb-x86_64@46-TDF-dbg, Branch:master, Time: 2014-11-13_00:14:29
Comment 6 Cheng-Chia Tseng 2014-11-13 14:33:41 UTC
It seems that you get the right result surprisingly!

I will check newer LibO on my fedora platform.
Comment 7 Cheng-Chia Tseng 2014-12-01 13:10:05 UTC
Created attachment 110296 [details]
Screenshot from Fedora 21 Beta LibO 4.4 Beta1

I test the example file with LibO 4.4.0.0 Beta 1 on Fedora 21 Beta today. However, I cannot reproduce your "right" result.

Here is my screenshot.
Comment 8 Cheng-Chia Tseng 2014-12-01 13:13:55 UTC
I do not know what could make a difference here. Maybe locale?
Comment 9 Matthew Francis 2014-12-02 01:05:17 UTC
I confirm this on Ubuntu 14.04 with current master.

The punctuation is right on OSX even if almost nothing else is (unrelated OSX specific rendering issues)

-> NEW
+ Blocks the CJK metabug
Comment 10 Mark Hung 2015-09-21 14:33:53 UTC
I've commited a patch for this : 8ead1423f10dee87967cbbbb5fabb2f26046bbb8.
Comment 11 Cheng-Chia Tseng 2015-09-21 15:05:55 UTC
Cool! Happy to hear that! :)
Comment 12 Commit Notification 2015-09-28 09:38:49 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ea91af84c13f37caf97cd3823a1593d46957a6db&h=libreoffice-5-0

tdf#83252 - Wrong punctuation direction after Chinese characters in

It will be available in 5.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Xisco Faulí 2016-09-15 22:15:33 UTC
Hello,
Is this bug fixed?
If so, could you please close it as RESOLVED FIXED?
Comment 14 Cheng-Chia Tseng 2016-09-16 16:28:26 UTC
fixed confirmed in 5.1.5.
marking as resolved.