tdf#83252 - Wrong punctuation direction after Chinese characters in

vertical layout.

Change-Id: I6391e665db205545f0d660e3de826755c954f286
Reviewed-on: https://gerrit.libreoffice.org/17836
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>